createNameSpace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx1
  labels:
    name: test
