pod-ckad-ex2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ckad-ex2
  name: ckad-ex2
spec:
  containers:
  - image: linuxacademycontent/candy-service:1
    name: ckad-ex2
    resources: 
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: config-volume
      mountPath: /etc/candy-serice
  volumes:
    - name: config-volume
      configMap:
        name: candy-service-config
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  serviceAccountName: candy-svc
  securityContext:
    fsGroup: 1003
