pod-ex-role.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: curlpod
  name: curlpod2
  namespace: tt
spec:
  containers:
  - image: tutum/curl
    name: curlpod
    command: ["/bin/sh"]
    args: ["-c",  "sleep 99999"]
  - image: linuxacademycontent/kubectl-proxy
    name: proxy
  restartPolicy: Always
  dnsPolicy: ClusterFirst
  serviceAccountName: pvreader
