pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    role: frontend
spec:
  volumes:
  - name: html
    # emptyDir: {}
    hostPath:
      path: /mnt 
      type: Directory

  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80

  - name: filecontainer
    image: debian
    volumeMounts:
    - name: html
      mountPath: /html
    command: ["/bin/sh", "-c"]
    args:
        - while true; do
          date >> /html/index.html;
          echo "Verison 1.1" >> /html/index.html;
          sleep 60;
          done
