stsfromds.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sts
  name: stsfromds
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: stsfromds
  template:
    metadata:
      labels:
        app: stsfromds
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: web
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 60
