service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: kubeserve
  selfLink: /api/v1/namespaces/default/services/kubeserve
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30081
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kubeserve
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
