svc.exe3.yaml
apiVersion: v1
kind: Service
metadata:
  name: webfront-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    run: webfront-deploy
  type: NodePort
