svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: web-services
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 380
  selector:
    app: webapp
  type: NodePort
